# lakehouse-labs

./: .gitignore  README.md  compose.yaml  pyproject.toml
conf/: hive-site.xml
notebooks/: delta-hive-demo.ipynb  hudi-hive-demo.ipynb  iceberg-hive-demo.ipynb
